@@ -8,22 +8,16 @@ podir = srcdir_root + "/po/"
 
 # Create MO files.
 
-begin
-    require 'gettext'
+Dir.glob("po/*.po") do |file|
+    lang = /po\/(.*)\.po/.match(file).to_a[1]
+    mo_path_bits = ['data', 'locale', lang, 'LC_MESSAGES']
+    mo_path = File.join(mo_path_bits)
 
-    Dir.glob("po/*.po") do |file|
-        lang = /po\/(.*)\.po/.match(file).to_a[1]
-        mo_path_bits = ['data', 'locale', lang, 'LC_MESSAGES']
-        mo_path = File.join(mo_path_bits)
-
-        (0 ... mo_path_bits.length).each do |i|
-            path = File.join(mo_path_bits[0 .. i])
-            puts path
-            Dir.mkdir(path) unless FileTest.exists?(path)
-        end
-
-        system("msgfmt po/#{lang}.po -o #{mo_path}/#{basename}.mo")
+    (0 ... mo_path_bits.length).each do |i|
+        path = File.join(mo_path_bits[0 .. i])
+        puts path
+        Dir.mkdir(path) unless FileTest.exists?(path)
     end
-rescue LoadError
-    puts "Ruby-Gettext is required in order to support localisation."
+
+    system("msgfmt po/#{lang}.po -o #{mo_path}/#{basename}.mo")
 end
